cmake_minimum_required(VERSION 3.26)
project(Assignment_Two)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignment_Two Question_1.cpp)
add_executable(Question_1.cpp Question_1.cpp)
add_executable(Question_2.cpp Question_2.cpp)
add_executable(Question_3.cpp Question_3.cpp)
add_executable(Question_4.cpp Question_4.cpp)
add_executable(Question_5.cpp Question_5.cpp)
add_executable(Question_6.cpp Question_6.cpp)
add_executable(Question_7.cpp Question_7.cpp)
add_executable(Question_8.cpp Question_8.cpp)
add_executable(Question_9.cpp Question_9.cpp)
add_executable(Question_10.cpp Question_10.cpp)